Fixed answers count, keeping question from being submitted without all fields populated, fixed some more layout spacing

--- a/src/components/Questions/Question/styles.module.css
+++ b/src/components/Questions/Question/styles.module.css
@@ -2,10 +2,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  align-items: flex-start;
 }
 
 .gridItemLeft p {
-  margin: 1% auto;
+  margin: 5%;
 }
 
 .question {
@@ -45,6 +46,8 @@
 .questionTags {
   width: 100%;
   white-space: nowrap;
+  padding: 1%;
+  padding-left: 0;
 }
 
 .tag {
